# Understory-AI

./: .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  biome.json  lefthook.yml  package.json  pyproject.toml
.github/workflows/: check.yml
apps/viewer/: README.md  dev-server.ts  index.html  package.json  tsconfig.json
apps/viewer/design/: understory-viewer.dc.html
apps/viewer/src/: alerts-view.test.ts  alerts-view.ts  app.css  app.ts  data.test.ts  data.ts  dev-server.test.ts  dom.ts  export.test.ts  export.ts  index.ts  map.ts  report-view.ts  triage.test.ts  triage.ts  types.test.ts  types.ts
benchmarks/: README.md
benchmarks/amazon-para/: aoi.yaml  config.yaml
benchmarks/eastern-woodland/: config.yaml
benchmarks/toy/: aoi.yaml  config.yaml
docs/: APPLICATIONS.md  ARCHIVE_STATUS.md  DATA_ACCESS.md  GOVERNANCE.md  METHODOLOGY.md  PERFORMANCE.md  PRODUCTIZATION.md
scripts/: assert_toy_report.py  make_toy_stack.py  measure_baseline_memory.py  probe_archive.py  size_sweep.py
