[project]
name = "understory"
version = "0.1.0"
description = "Open benchmark for detecting ground disturbance beneath forest canopy using NISAR L-band coherence"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "understory-core",
    "understory-detect",
    "understory-labels",
    "understory-perf",
]

[tool.uv.workspace]
members = [
    "packages/understory-core",
    "packages/understory-detect",
    "packages/understory-labels",
    "packages/understory-perf",
]

[tool.uv.sources]
understory-core = { workspace = true }
understory-detect = { workspace = true }
understory-labels = { workspace = true }
understory-perf = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pyright>=1.1.390",
    "import-linter>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "TID"]

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-q"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["packages"]
reportMissingImports = false

# Architecture as lint rules: the package dependency graph is enforced,
# not documented. detect -> {core, labels}; core and labels import nothing internal.
[tool.importlinter]
root_packages = ["understory_core", "understory_detect", "understory_labels", "understory_perf"]

[[tool.importlinter.contracts]]
name = "Package dependency direction"
type = "layers"
# understory_perf sits on top: it drives the pipeline, nothing imports it.
layers = [
    "understory_perf",
    "understory_detect",
    "understory_core : understory_labels",
]
